--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
         <p class="copyright"><a href="http://YOURDOMAIN/cookies.html">Privacy Policy &amp; Cookie Usage</a></p>
       </div><!-- /.col-md-6 -->
       <div class="col-md-6">
-        <p class="copyright text-right">All Rights Reserved &copy; Company Name 2015</p> 
+        <p class="copyright text-right">All Rights Reserved &copy; Company Name 2015. Edited</p> 
         <p class="design text-right"><a href="http://ann.ie" target="_blank" title="Ann.ie">Design || <i class="fa fa-star"></i> Ann.ie</a></p>
       </div><!-- /.col-md-6 -->
     </div><!-- /.row -->
